<resources>
    <string name="app_name">Spotlight</string>
    
    <string name="tabs_spotlights">Spotlights</string>
    <string name="tabs_friends">Friends</string>
    <string name="tabs_teams">Teams</string>
    <string name="tabs_profile">Profile</string>

    <string name="title_team_details">Team Details</string>
    <string name="title_friend_details">Friend Details</string>
    <string name="title_child_details">Child Details</string>

    <string name="facebook_app_id">271463346563817</string>

    <string name="view">View</string>
    <string name="share">Share</string>
    <string name="share_via">Share via</string>
    <string name="view_dialog">Select your background music</string>

    <string name="team_details_member">Members</string>
    <string name="team_details_spotlights">Spotlights</string>
    <string name="team_add_name">Add team name</string>
    <string name="team_add_coach">Add team coach</string>
    <string name="team_add_season">Add season</string>
    <string name="team_add_year">Add year</string>
    <string name="team_add_sport">Add sport</string>
    <string name="team_add_town">Add team town</string>
    <string name="team_add_grade">Add grade</string>

    <string name="fam_add_first">Add first name</string>
    <string name="fam_add_last">Add last name</string>
    <string name="fam_add_hometown">Add hometown</string>

    <string name="friend_details_spotlights">Spotlights</string>
    <string name="friend_details_teams">Teams</string>

    <string name="add_teams">Add Team</string>
    <string name="team_details">Team Details</string>
    <string name="search_teams">Search Teams</string>
    <string name="add_family">Add Family</string>
    <string name="add_spotlighters">Add Spotlighters</string>
    <string name="add_spotlight">Add Spotlight</string>

    <string name="teams_dialog">Search/Add a New Team</string>
    <string name="friends_dialog">Search/Add Spotlighters</string>

    <string name="profile_send_feedback">Send Feedback</string>
    <string name="profile_log_out">Log Out</string>
    <string name="profile_username"><b>Username</b></string>
    <string name="profile_first_name"><b>First Name</b></string>
    <string name="profile_last_name"><b>Last Name</b></string>
    <string name="profile_hometown"><b>Hometown</b></string>
    <string name="profile_family"><b>Family</b></string>

    <string name="picture_gallery">Pick from gallery</string>
    <string name="picture_camera">Take new picture</string>
    <string name="cancel">Cancel</string>
    
    <string name="profile_family_hint">Touch to add family</string>
    <string name="profile_hometown_hint">Touch to add hometown</string>
    <string name="profile_last_hint">Touch to add last name</string>
    <string name="profile_first_hint">Touch to add first name</string>


    <string name="remove_spotlight">Are you sure?</string>
    <string name="welcome_spotlight">Welcome to Spotlight</string>
    <string name="welcome_message">A Spotlight is a group of shared media from an event. \n\nFor example, you could create a Spotlight for one of your basketball games and share all the videos and pictures you took in a memorable way. Click on our intro Spotlight to check it out.</string>
    <string name="teams_message">This is where you can find all of the teams that you are interested in. \n\nSearch for existing teams by clicking the + button or create your own!</string>
    <string name="friends_message">This is where you can find all of your friends or teammates and follow their activity. \n\nClick on the + button to search for friends.</string>

    <string name="sure">Are you sure?</string>
    <string name="req">You have no pending requests</string>
    <string name="no_admin">This team currently has no admin. \n\nPlease try again later.</string>

    <string name="nodata">No Search Results</string>
    <string name="follow_sure">Follow this team?</string>
    <string name="please_wait">Please wait...</string>

    <string name="my_family"><b>My Family</b></string>
    <string name="friends"><b>Friends</b></string>

    <string name="which_child">Which child is on this team?</string>
    <string name="none_follow">None, I just want to follow it</string>
    <string name="unfollow">Unfollow?</string>
    <string name="must_follow">You must first request to follow this team</string>

</resources>
