<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:paddingBottom="24dp"
        android:orientation="vertical"
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Header  -->

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_margin="12dp"
                android:id="@+id/profile_avatar"
                android:layout_width="150dp"
                android:layout_height="150dp" />

            <TextView
                android:layout_marginBottom="4dp"
                android:id="@+id/profile_name"
                android:textColor="@android:color/white"
                android:textSize="26sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- Username -->

        <LinearLayout
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="0.2"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/profile_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_weight="0.8"
                android:id="@+id/profile_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!-- First name -->

        <LinearLayout
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="0.2"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/profile_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_weight="0.8"
                android:id="@+id/profile_first"
                android:hint="@string/profile_first_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!-- Last name -->

        <LinearLayout
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="0.2"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/profile_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_weight="0.8"
                android:id="@+id/profile_last"
                android:hint="@string/profile_last_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!-- Hometown -->

        <LinearLayout
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight=".2"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/profile_hometown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_weight=".8"
                android:id="@+id/profile_hometown"
                android:hint="@string/profile_hometown_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!-- Family -->

        <LinearLayout
            android:layout_marginLeft="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight=".4"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/profile_family"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_weight="0.6"
                android:hint="@string/profile_family_hint"
                android:id="@+id/profile_family"
                android:layout_width="190dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!-- Send feedback + Logout-->

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_margin="2dp"
                android:textColor="@android:color/black"
                android:id="@+id/profile_send_feedback"
                android:textSize="20sp"
                android:text="@string/profile_send_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:textColor="@android:color/holo_red_dark"
                android:id="@+id/profile_logout"
                android:textSize="22sp"
                android:text="@string/profile_log_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>



</ScrollView>
