<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:isScrollContainer="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:clickable="true"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Header  -->

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_margin="28dp"
                android:id="@+id/team_add_avatar"
                android:layout_width="130dp"
                android:layout_height="130dp" />

        </LinearLayout>

        <!-- Fields -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:inputType="textCapSentences"
                android:layout_margin="6dp"
                android:textSize="16sp"
                android:hint="@string/team_add_name"
                android:drawableRight="@drawable/x"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:id="@+id/team_add_name"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="34dp" />


            <EditText
                android:inputType="textCapSentences"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:textSize="16sp"
                android:hint="@string/team_add_town"
                android:drawableRight="@drawable/x"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:id="@+id/team_add_town"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="34dp" />


            <EditText
                android:inputType="textCapSentences"
                android:layout_margin="6dp"
                android:textSize="16sp"
                android:hint="@string/team_add_sport"
                android:drawableRight="@drawable/x"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:id="@+id/team_add_sport"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="34dp" />


            <EditText
                android:inputType="textCapSentences"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:textSize="16sp"
                android:hint="@string/team_add_grade"
                android:drawableRight="@drawable/x"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:id="@+id/team_add_grade"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="34dp" />


            <EditText
                android:inputType="textCapSentences"
                android:layout_margin="6dp"
                android:textSize="16sp"
                android:hint="@string/team_add_year"
                android:drawableRight="@drawable/x"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:id="@+id/team_add_year"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="34dp" />


            <EditText
                android:inputType="textCapSentences"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:textSize="16sp"
                android:hint="@string/team_add_season"
                android:drawableRight="@drawable/x"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:id="@+id/team_add_season"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="34dp" />

            <EditText
                android:inputType="textCapSentences"
                android:layout_margin="6dp"
                android:textSize="16sp"
                android:hint="@string/team_add_coach"
                android:drawableRight="@drawable/x"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:id="@+id/team_add_coach"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="34dp"/>

            <Button
                android:layout_gravity="center"
                android:layout_marginBottom="100dp"
                android:id="@+id/team_add_submit"
                android:text="Save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
